--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,172 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding:0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  background-color: #f0f0f0;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/*NavBar*/
+.navbar{
+ 
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 200px;
+  background-color: #ef0e3d;
+  margin-bottom: 1rem;
+}
+.img-container{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-self: center;
+  margin-top: auto;
+}
+.pokemon-logo{
+  width:40%;  
+  
+}
+.bar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  height: 20px;
+  background-color: #383838;
+}
+.circle{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width:60px;
+  height: 60px;
+  background-color: white;
+  border-radius: 50%;
+  border:7px solid #383838; 
 }
 
-.App-link {
-  color: #61dafb;
+.inner{
+  width:40px;
+  height: 40px;
+  border:4px solid #383838;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+
+
+.score-displayer{
+  display: flex;
+  justify-content: space-evenly ;  
+  margin-bottom: 2rem;
+}
+
+.score-container{
+  padding:1rem;
+  background-color: #ef0e3d;
+  border-radius: .5rem;
+  color:#eee;
+}
+.card-container{
+  padding:1rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap:3rem;
+  
+}
+.card{
+  padding:1rem;
+  text-align: center;
+  background-color: #ededeb;
+  border-radius: .5rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  transition: transform  .3s, box-shadow 0.3s;
+}
+
+.card:hover{
+  cursor: pointer;
+  box-shadow: rgba(239, 14, 61, 0.5) 0px 14px 28px, rgba(239, 14, 61, 0.5) 0px 10px 10px;
+  transform: scale(1.1);
+}
+
+.cardName{
+  margin-bottom: .5rem;
+}
+
+img{  
+  width:100px;
+  height:100px;  
+}
+
+/*Modal*/
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  position: relative;
+  background-color: #ededeb;
+  margin: auto;
+  padding: 1rem;
+  border: 1px solid #888;
+  width: 80%;
+  border-radius: .5rem;
+  
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn-done{
+  padding:.6rem 1.1rem;
+  margin-top:1rem;
+  color:#ededeb;
+  font-size: 1.2rem;
+  border:none;
+  background-color: #ef0e3d;
+  border-radius: .5rem;
+}
+
+.btn-done:hover{
+  cursor: pointer;
 }
